personal assignment 6
