# swagger.json
@@ -2,16 +2,16 @@
   "swagger": "2.0",
   "info": {
     "title": "My API",
-    "description": "Contacts API",
+    "description": "Players API",
     "version": "1.0.0"
   },
-  "host": "personalassignment04.onrender.com",
+  "host": "localhost:8080/Disc_Golf",
   "basePath": "/",
   "schemes": [
     "https"
   ],
   "paths": {
-    "/contacts/": {
+    "/player_info/": {
       "get": {
         "description": "",
         "produces": [
@@ -39,13 +39,19 @@
                 "lastName": {
                   "example": "any"
                 },
-                "email": {
+                "expLvl": {
                   "example": "any"
                 },
-                "favoriteColor": {
+                "favCourse": {
                   "example": "any"
                 },
-                "birthday": {
+                "favDisc": {
+                  "example": "any"
+                },
+                "throwStyle": {
+                  "example": "any"
+                },
+                "longestShot": {
                   "example": "any"
                 }
               }
@@ -62,7 +68,7 @@
         }
       }
     },
-    "/contacts/{id}": {
+    "/player_info/{id}": {
       "get": {
         "description": "",
         "produces": [
@@ -103,13 +109,19 @@
                 "lastName": {
                   "example": "any"
                 },
-                "email": {
+                "expLvl": {
                   "example": "any"
                 },
-                "favoriteColor": {
+                "favCourse": {
                   "example": "any"
                 },
-                "birthday": {
+                "favDisc": {
+                  "example": "any"
+                },
+                "throwStyle": {
+                  "example": "any"
+                },
+                "longestShot": {
                   "example": "any"
                 }
               }
